--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,11 @@
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/platform-server": "13.3.1",
     "@angular/router": "^13.3.1",
+    "@fullcalendar/angular": "^5.11.2",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
     "ajv": "8.11.0",
+    "angular-calendar": "^0.29.0",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
     "bootstrap-material-design": "4.1.3",
@@ -71,8 +75,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "sass": "1.32.13",
     "protractor": "7.0.0",
+    "sass": "1.32.13",
     "ts-node": "~10.7.0",
     "tslint": "6.1.3",
     "typescript": "~4.4.2"
