backend token generation frontend login page

--- a/backend/tn/tn/src/main/resources/application.properties
+++ b/backend/tn/tn/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
