--- a/backend/tn/tn/src/main/resources/application.properties
+++ b/backend/tn/tn/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtSecret= null
 bezkoder.app.jwtExpirationMs= 86400000
