--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/platform-server": "13.3.1",
     "@angular/router": "^13.3.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@fullcalendar/angular": "^5.11.2",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
@@ -46,6 +47,7 @@
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
+    "jwt-decode": "^3.1.2",
     "moment": "2.29.1",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
