--- a/backend/tn/tn/src/main/resources/application.properties
+++ b/backend/tn/tn/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tunisairdb
+spring.datasource.url=jdbc:mysql://localhost:3306/tunisairdb?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
+zeroDateTimeBehavior=convertToNull
 # App Properties
 bezkoder.app.jwtSecret= null
 bezkoder.app.jwtExpirationMs= 86400000
